# qt5_tmp

./: CMakeLists.txt  CMakeLists.txt.autosave  README.md  main.cpp
src/: main.cpp
src/client/: CMakeLists.txt  tClient.ui  tclient.cpp  tclient.h
src/server/: CMakeLists.txt  tserver.cpp  tserver.h
test/client/: CMakeLists.txt  TestClient.cpp
test/server/: CMakeLists.txt  TestServer.cpp
